<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mp4.group.pishtaz.com.mp4.register.ChooseActivationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="انتخاب نحوه فعال سازی"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/radioGroupActivation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <RadioButton
                android:id="@+id/radioButtonActivationEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/email_activation"
                android:typeface="monospace" />

            <RadioButton
                android:id="@+id/radioButtonActivationsms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activation_sms"
                android:typeface="monospace" />


        </RadioGroup>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearActiveSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/activate_sms"
                android:textColor="#000"
                android:textSize="14sp"
                android:typeface="monospace" />


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/alert_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="شماره موبایل"
                android:inputType="phone"
                android:textColorHint="@color/primary" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/textViewSendActivation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/primary"
            android:textSize="20sp"


            android:typeface="monospace" />
    </LinearLayout>

</LinearLayout>
