<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffefefef"
        android:fillViewport="true">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextUserName"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/primary"
                            android:textSize="16sp"
                            android:typeface="monospace" />


                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="7dp"
                            android:src="@drawable/onboarding_name"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/primary"
                            android:textSize="16sp"
                            android:typeface="monospace" />


                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="7dp"
                            android:src="@drawable/onboarding_email"

                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <EditText
                                    android:id="@+id/editTextPassword"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:hint="@string/password_register"
                                    android:imeOptions="actionDone"
                                    android:inputType="textPassword"
                                    android:padding="10dp"
                                    android:textColorHint="@color/primary"
                                    android:textSize="16sp"
                                    android:typeface="monospace" />


                            </LinearLayout>

                            <ImageView
                                android:id="@+id/imageViewShowPass"
                                android:layout_width="15dp"
                                android:layout_height="155dp"
                                android:layout_marginLeft="5dp"
                                android:src="@drawable/eye" />


                        </FrameLayout>


                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="7dp"
                            android:src="@drawable/onboarding_password"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <RadioGroup
                            android:id="@+id/radioGroupGender"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <RadioButton
                                android:id="@+id/radioButtonMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:drawableRight="@android:drawable/btn_radio"
                                android:gravity="right|center_vertical"
                                android:button="@null"
                                android:checked="true"
                                android:drawablePadding="10dp"
                                android:layout_marginRight="15dp"
                                android:textColor="@color/primary"
                                android:textSize="14sp"
                                />




                            <RadioButton
                                android:id="@+id/radioButtonFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female"
                                android:drawableRight="@android:drawable/btn_radio"
                                android:gravity="right|center_vertical"
                                android:drawablePadding="10dp"
                                android:button="@null"
                                android:textColor="@color/primary"
                                android:textSize="14sp"
                                android:typeface="monospace" />

                        </RadioGroup>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="7dp"
                            android:src="@drawable/gender_icon"

                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <Spinner
                            android:id="@+id/spinnerYear"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1.5"
                            android:entries="@array/year_arrays"
                            android:gravity="center" />

                        <Spinner
                            android:id="@+id/spinnerMonth"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.25"
                            android:entries="@array/month_arrays" />

                        <Spinner
                            android:id="@+id/spinnerDay"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"

                            android:layout_weight="1.25"
                            android:entries="@array/day_arrays" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="7dp"
                            android:src="@drawable/birthday_icon" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <Spinner
                            android:id="@+id/spinnerCountry"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4" />


                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="7dp"
                            android:src="@drawable/county_icon"

                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:id="@+id/linearStateEditText"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:visibility="gone"
                            android:weightSum="4">

                            <EditText
                                android:id="@+id/editTextState"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="نام استان"
                                android:typeface="monospace" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearStateSpinner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"


                            android:orientation="horizontal"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:weightSum="1">

                            <Spinner
                                android:id="@+id/spinnerState"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />


                        </LinearLayout>


                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="7dp"
                            android:src="@drawable/state_icon"

                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="6dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <com.rey.material.widget.CheckBox
                            android:id="@+id/chekBoxHeart"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="left"
                            android:text="@string/rules"
                            android:textColor="@color/primary"
                            android:textSize="16sp"
                            android:drawablePadding="10dp"
                            android:gravity="left|center_vertical"

                            android:checked="true"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="30dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp">


                        <TextView
                            android:id="@+id/buttonRegister"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:paddingLeft="5dp"
                            android:text="@string/register_txt"
                            android:textColor="@color/primary"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="monospace" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/primary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"

                        >


                        <TextView
                            android:id="@+id/textViewGoToLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:paddingLeft="5dp"
                            android:text="قبلا ثبت نام کرده ام"
                            android:textColor="@color/primary"
                            android:textSize="15sp"
                            android:typeface="monospace" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>


